--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,6 @@ li{
 .customer-facilities-card{
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
-    height: 361px;
     width: 230px; 
     height: 150px;
     padding: 30px 30px;
@@ -466,22 +465,7 @@ li{
 .btn{
    margin: 40px 0;
 }
-.get-quote-now{
-    background-color: #23a6f0;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 20px;
-    font-weight: 600; 
-}
-.learn-more{
-    background-color: rgba(216, 216, 215, 0.432);
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 20px;
-    font-weight: 600;
-}
+
 
 /* customer facilities */
 .customer-container{
@@ -492,17 +476,17 @@ li{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     margin: 12px 0px;
-    gap: 20px;
+    gap: 10px;
 
 }
 .customer-facilities-card{
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
-    height: 361px;
-    width: 230px; 
     height: 150px;
-    padding: 20px 10px;
+    width: 230px; 
+    padding: 20px 20px;
     background-color: #ffffff;
+    margin: 0px 20px;
 }
 #customer-facilities-card-blue{
     background-color: #23a6f0;
@@ -524,34 +508,34 @@ li{
 
  /* customer review style */
  .customer-review-container{
-    height: 1170px;
+    height: 972px;
     background-color: #fafafa;
  }
  .customer-review{
     text-align: center;
-    padding: 120px 0px;
+    padding: 20px 0px;
  }
  .user-img{
-    width: 70px;
-    height: 60px;
+    width: 149px;
+    height: 149px;
  }
  .review-main{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     text-align: center;
-    margin: 0px 10px;
+    margin: 0 30px;
     gap: 20px;
  }
  .review-area{
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
-    width: 190px; 
+    width: 260px; 
     height: 327px;
     padding: 30px 40px;
     background-color: #ffffff;
  }
  .review-area-content{
-    margin-top: 10px;
+    margin-top: 0px;
  }
  /* company logo style */
  .company-logo-container{
@@ -576,12 +560,12 @@ li{
  }
  .subscribe-content{
     display: grid;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(2,1fr);
     gap: 20px;
     background-image: linear-gradient(to right,#2c3d88,#d51cc9);
     width: 720px;
-    height: 224px;
-    margin: 0px 5px;
+    height: 144px;
+    margin: 10px 5px;
  }
 .subscribe{
    padding: 30px 10px;
@@ -623,8 +607,10 @@ li{
 .price-area{
     display: grid;
     grid-template-columns: repeat(1,1fr);
-    margin: 0px 38px;
+    margin: 0px 30px;
     gap: 90px;
+    justify-content: center;
+    align-items: center;
 }
 .fa-check{
     width: 12px;
@@ -761,7 +747,7 @@ li{
 }
 /* footer style */
 .footer-container{
-    height: 1100px;
+    height: 840px;
 }
 .footer-content{
     display: grid;
@@ -811,51 +797,49 @@ li{
     *{
         overflow-x: hidden;
     }
+    .bg-img{
+        height: 650px;
+    }
     .nav-container{
+        height: 150px ;
+        padding: 0px 2px;
         display: grid;
-        height: 100px ;
+        grid-template-columns: repeat(3,1fr);
+        justify-content: center;
         align-items: center;
-        padding: 0px 10px
     }
     .logo{
-        height: 47px;
+        height: 32px;
         width: 117px;
         color: white;
     }
-    
+   
     nav ul li{
         list-style: none;
         color: #bec5c5;
         font-weight: 600;
+        margin-top: 5px;
     }
     nav ul{
         display: grid;
-        gap: 20px;
-    }
-    li{
-      list-style: none;  
-      color: white;
+        gap: 2px;
+        margin-top: -12px;
     }
     .member{
+        display: none;
+    }
+    .icon{
         display: flex;
-        gap: 10px;
+        gap: 20px;
+        color: #767979;
     }
     
-    .become-member{
-        background-color: #23a6f0;
-        color: white;
-        border: none;
-        padding: 10px 10px;
-        border-radius: 5px;
-        font-weight: 600;
-        text-align: center;
-    }
     
     /* hero content style */
     .hero-content{
         text-align: center;
         justify-content: center;
-        margin: 120px 0px;
+        margin: 50px 0px;
     }
     .hero-content-h2{
         color: white;
@@ -866,45 +850,32 @@ li{
         margin-top: 20px;
         color: white;
     }
+    .hero-content-p br{
+        display: none;
+    }
     .btn{
        margin: 40px 0;
     }
-    .get-quote-now{
-        background-color: #23a6f0;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 20px;
-        font-weight: 600; 
-    }
-    .learn-more{
-        background-color: rgba(216, 216, 215, 0.432);
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 20px;
-        font-weight: 600;
-    }
     
     /* customer facilities */
+
     .customer-container{
-        height: 700px;
+        height: 750px;
+        overflow: hidden;
         background-color: rgba(192, 191, 189, 0.075);
     }
     .customer-facilities{
         display: grid;
         grid-template-columns: repeat(1,1fr);
-        margin: 12px 0px;
         gap: 20px;
-    
+        margin: 20px 30px;
     }
     .customer-facilities-card{
         border-radius: 5px;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
-        height: 361px;
-        width: 230px; 
         height: 150px;
-        padding: 20px 10px;
+        width: 230px; 
+        padding: 30px 30px;
         background-color: #ffffff;
     }
     #customer-facilities-card-blue{
