footer section updated

--- a/css/style.css
+++ b/css/style.css
@@ -898,12 +898,14 @@ li{
     
      /* customer review style */
      .customer-review-container{
-        height: 1170px;
+        height: 1570px;
         background-color: #fafafa;
+        overflow: hidden;
+        text-align: center;
      }
      .customer-review{
         text-align: center;
-        padding: 120px 0px;
+        padding: 20px 0px;
      }
      .user-img{
         width: 149px;
@@ -919,11 +921,12 @@ li{
      }
      .review-area{
         border-radius: 5px;
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
+        box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.2), 4px 4px 10px 0 rgba(0, 0, 0, 0.19);
         width: 250px; 
         height: 360px;
         padding: 30px 40px;
         background-color: #ffffff;
+        
      }
      .review-area-content{
         margin-top: 10px;
@@ -931,7 +934,8 @@ li{
      /* company logo style */
      .company-logo-container{
         background-color: #fafafa;
-        height: 90px;
+        height: 700px;
+        text-align: center;
      }
      .company-logo-content{
         display: grid;
@@ -940,22 +944,24 @@ li{
         gap: 10px;
      }
      .company-logo-img{
-      width: 90px;
-      height: 30px;
+      width: 120px;
+      height: 90px;
      }
      
      /* subscribe newsletter section */
      .subscriber-container{
         background-color: #fafafa;
         overflow-y: hidden;
+        text-align: center;
+        justify-content: center;
      }
      .subscribe-content{
         display: grid;
         grid-template-columns: repeat(1,1fr);
         gap: 20px;
         background-image: linear-gradient(to right,#2c3d88,#d51cc9);
-        width: 720px;
-        height: 224px;
+        width: 390px;
+        height: 198px;
         margin: 0px 5px;
      }
     .subscribe{
@@ -965,8 +971,7 @@ li{
     }
     .subscribe-email{
         width: 350px;
-        padding: 40px 80px; 
-        overflow-y: hidden; 
+        padding: 40px 30px; 
     }
     #email{
         background-color: #ffffff;
@@ -993,13 +998,13 @@ li{
     .pricing-content{
         text-align: center;
         margin: 0px;
-        padding: 90px 0;
+        padding: 29px 0;
     }
     .price-area{
         display: grid;
         grid-template-columns: repeat(1,1fr);
         margin: 0px 38px;
-        gap: 90px;
+        gap: 60px;
     }
     .fa-check{
         width: 12px;
@@ -1016,7 +1021,6 @@ li{
     #price-per-month2{
         background-color: #252b42;
         color: #ffffff;
-        height: 600px;
         margin-top: -35px;
     }
     .price-div{
@@ -1027,12 +1031,11 @@ li{
     .price-card{
         border-radius: 10px;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(255, 255, 255, 0.082);
-        width: 300px; 
-        height: 560px;
+        width: 245px; 
+        height: 590px;
         padding: 30px 40px;
         background-color: #ffffff;
         border: 1px solid #23a6f0;
-        margin: 0px 20px;
     }
     .try-for-me-btn{
         background-color: #23a6f0;
@@ -1045,8 +1048,8 @@ li{
     }
     /* branches content style */
     .branches-container{
-        margin-top: 20px;
-        height: 400px;
+        margin-top: 10px;
+        height: 600px;
         background-image: url('../images/background\ \(1\).png');
         /* background-color: #fafafa; */
         overflow-y: hidden;
@@ -1055,31 +1058,57 @@ li{
         display: grid;
         grid-template-columns: repeat(1,1fr);
         color: #ffffff;
-        padding: 100px 10px;
+        padding: 40px 25px;
+        gap: 60px;
     
     }
+    .branches h3{
+        padding: 7px 50px;
+    }
+    .branches p{
+        padding-left: 25px;
+    }
+    .branches br{
+        display: none;
+    }
     .branch-img{
-        margin-top: -50px;
+       width: 350px;
+
     }
     /*appoinment form */
+    .appoinment-container{
+        height: 990px;
+        overflow-y: hidden;
+    }
     .appoinment-form{
         box-shadow: 0px 1px 1px whitesmoke;
-        width: 500px; 
+        width: 380px; 
         height: 550px;
-        padding: 30px 40px;
+        padding: 10px 5px;
         background-color: #ffffff;
     }
     .appoinment-form h2{
-        margin-top: 50px;
+        display: none;
+    }
+    .appoinment-form h3{
+        font-size: 27px;
+        font-weight: 600;
+    }
+    .appoinment-img{
+        width: 380px;
+        height: 450px;
+        overflow-y: hidden;
     }
     .appoinment-content{
-        display: flex;
-        height: 735px;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        height: 835px;
         margin-left: 10px;
         margin-top: 20px;
+        overflow-y: hidden;
     }
     .form-box{
-        width: 390px;
+        width: 294px;
         padding: 10px 10px;
         border-radius: 5px;
         border: 1px solid #bec5c5;
@@ -1094,14 +1123,14 @@ li{
         color: #252b42;
     }
     #dept{
-        width: 415px;
+        width: 315px;
         margin-top: 10px;
     }
     #time{
-        width: 415px;
+        width: 315px;
     }
     .appoinment-btn{
-        width: 415px;
+        width: 315px;
         padding: 13px 30px;
         background-color: #23a6f0;
         border: none;
@@ -1114,14 +1143,15 @@ li{
     /* contact us */
     .contact-container{
         background-color: #fafafa;
-        height: 196px;
+        height: 300px;
+        text-align: center;
     }
     .contact-us{
         display: grid;
         grid-template-columns: repeat(1,1fr);
     }
     .contact-area{
-     margin: 0px 20px;
+     margin: 10px 20px;
     }
     .contact-btn{
         background-color: #23a6f0;
@@ -1132,20 +1162,26 @@ li{
         font-weight: 700;
         font-size: 16px;
         margin-top: 20px;
-        margin-right: -20px;
+        /* margin-right: -20px; */
+        text-align: center;
+        justify-content: center;
     }
     /* footer style */
     .footer-container{
-        height: 1100px;
+        height: 1000px;
     }
     .footer-content{
         display: grid;
         grid-template-columns: repeat(1,1fr);
         justify-content: center;
         /* text-align: center; */
-        margin: 20px 10px;
+        margin: 30px 10px;
         height: 690px;
         font-size: 18px;
+        gap: 30px;
+    }
+    .footer{
+        height: 200px;
     }
     .fa-solid{
         color: #23a6f0;
@@ -1174,7 +1210,7 @@ li{
         padding: 0 20px;
         color: #23a6f0;
         display: grid;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(3,1fr);
         margin: 16px 9px;
     }
     
